security: OWASP Top 10 対策（CSP, Referrer-Policy, XSS対策）

--- a/fortune.html
+++ b/fortune.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- OWASP Top 10: A03 Injection, A05 Misconfiguration -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://pagead2.googlesyndication.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://pagead2.googlesyndication.com https://www.googlesyndication.com https://googleads.g.doubleclick.net; object-src 'none'; base-uri 'self'; form-action 'self';">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <title>フォーチュンクッキー｜握力チェッカー"鑷"</title>
   <meta name="description" content="握力チェッカー鑷のフォーチュンクッキー。名言・格言・驚きの実在法令をランダムで表示。握力診断の合間にどうぞ。">
   <meta name="keywords" content="フォーチュンクッキー,名言,格言,握力チェッカー,鑷,驚きの法令">
