--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- OWASP Top 10: A03 Injection, A05 Misconfiguration -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://pagead2.googlesyndication.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://pagead2.googlesyndication.com https://www.googlesyndication.com https://googleads.g.doubleclick.net; object-src 'none'; base-uri 'self'; form-action 'self';">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <title>握力チェッカー"鑷"｜握力診断・動物比較</title>
   <meta name="description" content="重ねた紙を何枚ちぎれたかで握力を推定。成人平均との比較や「ぎりぎり負ける動物」で楽しく診断できる無料ツールです。">
   <meta name="keywords" content="握力,握力チェック,握力診断,握力測定,握力 動物,握力 診断 無料">
@@ -706,7 +710,7 @@
     <div class="input-area">
       <label>何枚ちぎった？</label>
       <div class="input-row">
-        <input type="number" class="sheets-input" id="sheetsInput" step="any" placeholder="?">
+        <input type="number" class="sheets-input" id="sheetsInput" step="1" min="1" max="999" placeholder="?" inputmode="numeric" autocomplete="off">
         <span class="unit">枚</span>
       </div>
       <button class="check-btn" onclick="checkGrip()">診断する</button>
@@ -925,7 +929,7 @@
       overlay.classList.remove('fade-in', 'active');
       const fortune = document.getElementById('blackoutFortune');
       fortune.classList.remove('show');
-      fortune.innerHTML = '';
+      fortune.textContent = '';
       // サイトグリッチエフェクトリセット
       clearSiteGlitch();
       window.scrollTo({ top: 0, behavior: 'smooth' });
@@ -1090,12 +1094,18 @@
           overlay.classList.add('fade-in');
         });
       });
-      // 暗転完了後に驚きの実在法令を表示
+      // 暗転完了後に驚きの実在法令を表示（A03: innerHTML を使わずテキストのみ挿入）
       setTimeout(() => {
         const laws = blackoutLaws.length ? blackoutLaws : (window.__FORTUNE_DATA__.quotes || []).slice(0, 1);
         const law = laws[Math.floor(Math.random() * laws.length)];
         const fortuneEl = document.getElementById('blackoutFortune');
-        fortuneEl.innerHTML = law ? `${law.text}<br><br>──${law.author}` : '';
+        fortuneEl.textContent = '';
+        if (law) {
+          fortuneEl.appendChild(document.createTextNode(law.text));
+          fortuneEl.appendChild(document.createElement('br'));
+          fortuneEl.appendChild(document.createElement('br'));
+          fortuneEl.appendChild(document.createTextNode('──' + (law.author || '')));
+        }
         fortuneEl.classList.add('show');
       }, 1800);
     }
